--- a/Process.xaml
+++ b/Process.xaml
@@ -6,7 +6,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1119,1875</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1196,1875</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ProcessTransaction_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="23">
@@ -62,6 +62,7 @@
       <AssemblyReference>UiPath.Database</AssemblyReference>
       <AssemblyReference>UiPath.Mail</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Sequence sap2010:Annotation.AnnotationText="Invoke major steps of the business process, which are usually implemented by multiple subworkflows.&#xA;&#xA;If a BusinessRuleException is thrown, the transaction is skipped. &#xA;If another kind of exception occurs, the current transaction can be retried. " DisplayName="Process" sap:VirtualizedContainerService.HintSize="463,1710" sap2010:WorkflowViewState.IdRef="Sequence_1">
@@ -125,7 +126,7 @@
         </ui:InvokeWorkflowFile.Arguments>
       </ui:InvokeWorkflowFile>
     </Sequence>
-    <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each partner send summary" sap:VirtualizedContainerService.HintSize="412,709" sap2010:WorkflowViewState.IdRef="ForEach`1_1" Values="[partnersIdList]">
+    <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each partner send summary" sap:VirtualizedContainerService.HintSize="421,709" sap2010:WorkflowViewState.IdRef="ForEach`1_1" Values="[partnersIdList]">
       <ui:ForEach.Body>
         <ActivityAction x:TypeArguments="x:String">
           <ActivityAction.Argument>
@@ -221,13 +222,24 @@
             </ui:FilterDataTable>
             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke SendPOCEmail workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_11" UnSafe="False" WorkflowFileName="Workflows\SendPOCEmail.xaml">
               <ui:InvokeWorkflowFile.Arguments>
-                <InArgument x:TypeArguments="x:String" x:Key="in_partnerId">[partner]</InArgument>
-                <InArgument x:TypeArguments="sd:DataTable" x:Key="in_devCandidates">[partnerRpaDt]</InArgument>
-                <InArgument x:TypeArguments="sd:DataTable" x:Key="in_infraCandidates">[partnerInfraDt]</InArgument>
-                <InArgument x:TypeArguments="sd:DataTable" x:Key="in_saCandidates">[partnerSADt]</InArgument>
-                <InArgument x:TypeArguments="sd:DataTable" x:Key="in_baCanddates">[partnerBADt]</InArgument>
-                <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
-                <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection" />
+                <InArgument x:TypeArguments="x:String" x:Key="in_partnerId">
+                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="partner" />
+                </InArgument>
+                <InArgument x:TypeArguments="sd:DataTable" x:Key="in_devCandidates">
+                  <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="partnerRpaDt" />
+                </InArgument>
+                <InArgument x:TypeArguments="sd:DataTable" x:Key="in_infraCandidates">
+                  <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="partnerInfraDt" />
+                </InArgument>
+                <InArgument x:TypeArguments="sd:DataTable" x:Key="in_saCandidates">
+                  <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="partnerSADt" />
+                </InArgument>
+                <InArgument x:TypeArguments="sd:DataTable" x:Key="in_baCanddates">
+                  <mva:VisualBasicValue x:TypeArguments="sd:DataTable" ExpressionText="partnerBADt" />
+                </InArgument>
+                <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
+                  <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
+                </InArgument>
               </ui:InvokeWorkflowFile.Arguments>
             </ui:InvokeWorkflowFile>
           </Sequence>
